<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/horen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/category_play"
            android:textSize="@dimen/activity_texts"/>

        <Button
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/horen"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/category_pause"
            android:padding="@dimen/activity_vertical_margin"
            android:textSize="@dimen/activity_texts"
            />
        <Button
            android:id="@+id/pe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/horen"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/category_back"
            android:textSize="@dimen/activity_texts"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
            android:layout_above="@id/s"
            android:text="@string/category_next"
            android:padding="@dimen/activity_vertical_margin"
            android:textSize="@dimen/activity_texts"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/category_save"
            android:padding="@dimen/activity_vertical_margin"
            android:textSize="@dimen/activity_texts"/>
    </RelativeLayout>


</LinearLayout>